# ATD3.5-S3-Internet-Radio-Demo-PIO

./: .gitignore
LVGL/: ATD35_S3_Internet_Radio.sll  ATD35_S3_Internet_Radio.spj
include/: lv_conf.h
lib/ESP32-audioI2S-3.0.0/src/: Audio.cpp
src/: main.cpp
src/gui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/gui/components/: ui_comp_hook.c
src/gui/images/: ui_img_1897292250.c  ui_img_71751729.c  ui_img_933478393.c  ui_img_agtuevydc9_png.c  ui_img_bg_png.c  ui_img_efm_png.c  ui_img_green_png.c  ui_img_kvdhawt62s_png.c  ui_img_play_png.c  ui_img_stop_png.c
src/gui/screens/: ui_Screen1.c
