SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_bg_png.c
    images/ui_img_kvdhawt62s_png.c
    images/ui_img_green_png.c
    images/ui_img_agtuevydc9_png.c
    images/ui_img_efm_png.c
    images/ui_img_71751729.c
    images/ui_img_1897292250.c
    images/ui_img_play_png.c
    images/ui_img_stop_png.c
    images/ui_img_933478393.c)

add_library(ui ${SOURCES})
